sandbox/output
HikerTest.java:46: error: cannot find symbol
    public ExpectedException expectedEx = ExpectedException.none(); 
           ^
  symbol:   class ExpectedException
  location: class HikerTest
HikerTest.java:46: error: cannot find symbol
    public ExpectedException expectedEx = ExpectedException.none(); 
                                          ^
  symbol:   variable ExpectedException
  location: class HikerTest
2 errors
